nouvelle directive : player youtube

--- a/src/movies/views/serie.html
+++ b/src/movies/views/serie.html
@@ -281,7 +281,7 @@
                 
                 <li><label>iso_639_1 :</label> {{result.iso_639_1}}</li>
                 <li><label>id :</label> {{result.id}}</li>
-                <li><label>key :</label> </li>
+                <li><label>key :</label> <youtube code='result.key'>{{result.key}} </youtube></li>
                 <li><label>name :</label> {{result.name}}</li>
                 <li><label>site :</label> {{result.site}}</li>
                 <li><label>size :</label> {{result.size}}</li>
