--- a/src/movies/views/series.html
+++ b/src/movies/views/series.html
@@ -1,10 +1,23 @@
 <div class="panel panel-primary">
+
+
+    <form style="width:450px;margin:5px;padding:15px;border:solid 1px black;background-color:#68228B">
+        <label style="color:white">Recherche : </label>
+        <input  class="btn" style="width:100%"
+                ng-change="search(searchValue)"
+                ng-model="searchValue">
+    </form>
 <div class="panel-heading">
     <h3 class="panel-title panel-title title--inline">Liste des Films Populaires | <a href="#/films">Films</a> | <a href="#/series">Series</a> </h3>
    
     </div>
 
+    <div ng-if="series.total_results==0"> Aucun série n'a été trouvé lors de votre recherche</div>
+    
     <div class="panel-body">
+
+       
+
       <div class="col-sm-6 col-md-4" ng-repeat="serie in series.results" >
     <div class="pull-right" ng-switch on="movie.status">
         <span ng-switch-when="0" class="label label-success">Disponible</span>
