ShowMore :  Movies & Series

--- a/src/movies/views/movies.html
+++ b/src/movies/views/movies.html
@@ -77,9 +77,41 @@
                 </div>
             </div>
         </div>
-        <!-- <movie-block  ng-repeat="movie.results in movies.more | orderBy: query.order" movie="movie"></movie-block> -->
+
+    <div ng-repeat="movies in movies.more | orderBy: query.order" movie="movie" >
+        <div ng-repeat="movie in movies | orderBy: query.order" movie="movie" >
+            <div class="col-sm-6 col-md-4">
+                <div class="pull-right" ng-switch on="movie.status">
+                    <span ng-switch-when="0" class="label label-success">Disponible</span>
+                    <span ng-switch-when="1" class="label label-warning">Occupé(e)</span>
+                    <span ng-switch-when="2" class="label label-danger">Blessé(e)</span>
+                </div>
+                <div class="thumbnail">
+                    <img src="http://image.tmdb.org/t/p/w500{{movie.poster_path}}" class="image-thumbnail"> 
+                    <hr>
+                    <img src="http://image.tmdb.org/t/p/w500{{movie.backdrop_path}}" class="image-thumbnail"> 
+                    <div class="caption">
+                        <p>adult : {{movie.adult}}</p>
+                        <h3>title : {{movie.title}}</h3>
+                        <p>original_title : {{movie.original_title}}</p>
+                        <p>id : {{movie.id}}</p>
+                        <p>genre_ids : <ul><li ng-repeat="(key, genre) in movie.genre_ids">{{genre}} (traité TpH : {{ genreList[genre] }} )</li></ul></p>
+                        <p>vote_average : {{movie.vote_average}}</p>
+                        <p>original_language : {{movie.original_language}}</p>
+                        <p>release_date : {{movie.release_date}}</p>
+                        <p>overview : {{movie.overview}}</p>
+                        <p>popularity : {{movie.popularity}}</p>
+                        <p>video : {{movie.video}}</p>
+                        <p>vote_average : {{movie.vote_average}}</p>
+                        <p>vote_count : {{movie.vote_count}}</p>
+                        <button class="btn btn-primary" ng-click="showMovie(movie.id)">Regarder</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+  
 
     </div>
-
-<button class="btn btn-primary" ng-click="showMoreMovies(page)">Regarder</button>
+<button class="btn btn-primary" ng-click="showMoreMovies(page)"> Voir plus de films ! </button>
 </div>
