--- a/src/movies/views/series.html
+++ b/src/movies/views/series.html
@@ -17,8 +17,8 @@
     <div class="panel-body">
 
        
-
-      <div class="col-sm-6 col-md-4" ng-repeat="serie in series.results" >
+    <div  ng-repeat="serie in series.results">
+      <div class="col-sm-6 col-md-4" >
     <div class="pull-right" ng-switch on="movie.status">
         <span ng-switch-when="0" class="label label-success">Disponible</span>
         <span ng-switch-when="1" class="label label-warning">Occupé(e)</span>
@@ -41,8 +41,41 @@
             <button class="btn btn-primary" ng-click="showSerie(serie.id)">Regarder</button>
         </div>
     </div>
+    </div>    </div>   
+
+    <div ng-repeat="series in series.more">
+    <div  ng-repeat="serie in series">
+      <div class="col-sm-6 col-md-4" >
+    <div class="pull-right" ng-switch on="movie.status">
+        <span ng-switch-when="0" class="label label-success">Disponible</span>
+        <span ng-switch-when="1" class="label label-warning">Occupé(e)</span>
+        <span ng-switch-when="2" class="label label-danger">Blessé(e)</span>
+    </div>
+    <div class="thumbnail">
+        <img src="http://image.tmdb.org/t/p/w500{{serie.poster_path}}" class="image-thumbnail">   
+<hr>
+        <img src="http://image.tmdb.org/t/p/w500{{serie.backdrop_path}}" class="image-thumbnail">  
+        <div class="caption">
+           
+            <h3>name : {{serie.name}}</h3>
+            <p>original_name : {{serie.original_name}}</p>
+            <p>id : {{serie.id}}</p>                    
+            <p>first_air_date : {{serie.first_air_date}}</p>
+            <p>origin_country : {{serie.origin_country}}</p>
+            <p>popularity : {{serie.popularity}}</p>
+            <p>vote_average : {{serie.vote_average}}</p>
+            <p>vote_count : {{serie.vote_count}}</p>
+            <button class="btn btn-primary" ng-click="showSerie(serie.id)">Regarder</button>
+        </div>
+    </div>
+    </div>
+    </div>
+
+
 </div>
 
+<button class="btn btn-primary" ng-click="showMoreSeries(page)"> Voir plus de séries ! </button>
+{{page}}
 
     </div>
 
