--- a/profil/liquidslider-master/css/liquid-slider.css
+++ b/profil/liquidslider-master/css/liquid-slider.css
@@ -9,7 +9,7 @@
   height:350px;
   overflow:scroll;
 }
-.ls-preloader {
+.ls-preloader {  
   background: url(../images/loading.gif) #f2f2f2 no-repeat center 50%;
   opacity:1;
   width:100%;
@@ -52,180 +52,160 @@
   width:100%;
   opacity: 0;
   position: absolute;
-  top: 0;
+  top: 0; 
   left: 0;
   display: block;
 }
 
 /*** Panels ***/
-.liquid-slider .ls-panel {
+.liquid-slider .ls-panel {  
   width: 600px;
   display: block;
   float: left;
 }
-.panel-wrapper {
-  height: auto;
-	margin-top: 0px;
-	margin-right: 35px;
-	padding-top: 50px;
-	width: 780px;
+.panel-wrapper {  
+  padding: 15px 40px;
+  position:relative;
 }
 
-
-/*  CSS Perso  */
-
-@import url(http://fonts.googleapis.com/css?family=Roboto:400,700italic,700);
-
-.sidebar{
-
-  width: 405px;
-  background-color: #2b2b2b;
-  position: fixed;
-  height: 100%;
-
+/*** Tabbed Navigation ***/
+.ls-nav {
+  overflow:hidden;
+  clear:both;
 }
-
-.user-pic {
-
-  width: 100px;
-  height: 100px;
-  background-color: #deb90c;
-  border-radius: 100%;
-  border: 5px solid #fff;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 50px;
-
+.ls-nav a {
+  background: #d8d8d8;
+  color: #333333;
+  margin-right: 1px;
+  padding: 10px 15px;  
+  outline:0;
 }
-
-h3.user-name {
-
-  font-family: 'Roboto';
+.ls-nav a:hover {
+  background: #f2f2f2;
+  color: #333333;
+  text-shadow: none;
+}
+.ls-nav .current a {
+  background: #f2f2f2;
+}
+.currentCrossLink {
   font-weight: bold;
-  color: #fff;
-  text-align: center;
-  font-size: 1em;
-  margin-top: 20px;
-
 }
-
-
-hr {
-
-  width: 50px;
-  height: 1px;
-  color: #fff;
-  margin-top: 20px;
-
+.ls-nav ul {  
+  padding:0;
+  clear: both;
+  display: block;
+  margin: auto;
+  overflow: hidden;
 }
-
-p.user-bio{
-
-  text-align: center;
-  color: #757575;
-  font-family: 'Roboto';
-  font-weight: normal;
-  margin-top: 20px;
-  font-size: 0.8em;
-  padding-left: 20px;
-  padding-right: 20px;
-
+.ls-nav ul li {
+  display: inline;
 }
-
-.social-content {
-
-  width: 300px;
-  height: 50px;
-  /*background-color: grey;*/
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 20px;
-
-}
-
-.social-icon {
-
-  width: 30px;
-  height: 30px;
+.ls-nav ul li a {
+  display: block;
   float: left;
-  margin-left: 35px;
-
+  text-decoration: none;
 }
 
-
-.content {
-
-	height: auto;
-	margin-left: 440px;
-	margin-top: 0px;
-	margin-right: 35px;
-	padding-top: 50px;
-	width: 780px;
-
-}
-
-h1.title-details {
-
-	font-size: 1.8em;
-	font-family: 'Roboto';
-	font-weight: bold;
-	color: #fff;
-	text-transform: uppercase;
-
-}
-
-hr.subtitle {
-
+/*** Mobile Navigation ***/
+.ls-select-box { 
   width: 100%;
-  height: 1px;
-  color: #757575;
-  margin-top: 10px;
-
+  height: 35px;
+  overflow: hidden;
+  background: url(../images/menu.png) no-repeat right #ddd;
+}
+.ls-select-box select {  
+  width: 150%;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance:none;
+  background: transparent;
+  padding: 5px;
+  font-size: 110%;
+  border: none;
+  height: 35px;
+  cursor:pointer;
+  outline: 0;
 }
 
-.top {
-
-	width: 380px;
-	height: auto;
-	float: left;
-	margin-right: 10px;
-
+/*** Arrow Navigation (non-graphical) ***/
+.ls-nav-left, .ls-nav-right {
+  top:0;
+  float: left;
+  clear:both;
+}
+.ls-nav-left a, .ls-nav-right a {
+  background: #000;
+  color: #fff;
+  padding: 5px;
+  width: 100px;
+  display: block;
+  text-align: center;
+  text-decoration: none;
+}
+.ls-responsive .ls-nav-left {
+  position: absolute;
+  left: 0;
+  z-index: 2;
+}
+.ls-responsive .ls-nav-left a {
+  background: #9A9A9A;
+  width: 80px;
+}
+.ls-responsive .ls-nav-left a:hover {
+  background: #747474;
+}
+.ls-responsive .ls-nav-right {
+  position: absolute;
+  right: 0;
+  z-index: 2;
+}
+.ls-responsive .ls-nav-right a {
+  background: #9A9A9A;
+  width: 80px;
+}
+.ls-responsive .ls-nav-right a:hover {
+  background: #747474;
 }
 
-
-.flop {
-
-	width: 380px;
-	height: auto;
-	float: right;
-
+/*** Arrow Navigation (graphical) ***/
+.ls-nav-left-arrow, .ls-nav-right-arrow {
+  cursor: pointer;
+  float: left;
+  clear: both;
 }
-
-h2.myTop-Flop {
-
-	font-size: 1.5em;
-	font-family: 'Roboto';
-	font-weight: bold;
-	color: #deb90c;
-	text-transform: uppercase;
-	margin-top: 10px;
-
+.ls-nav-left-arrow a, .ls-nav-right-arrow a {
+  display: block;
 }
-
-.picto-top {
-
-	width: 35px;
-	height: auto;
-	float: left;
-
+[class$="-arrow"] {
+  width: 25px;
+  height: 25px;
+  background-image: url(../images/arrow.png);
+  background-repeat: no-repeat;
+  margin-top: 50px;
+  position:relative;
 }
-
-.thumb {
-
-	width: 275px;
-	height: 130px;
-	background-color: grey;
-	margin-top: 20px;
-	margin-left: 35px;
-
+.ls-nav-right-arrow {
+  background-position: top right;  
+  margin-right: 5px;
+}
+.ls-nav-left-arrow {
+  background-position: top left;  
+  margin-left: 5px;
+}
+.ls-nav-left-arrow:hover {
+  background-position: bottom left;
+}
+.ls-nav-right-arrow:hover {
+  background-position: bottom right;
+}
+.ls-responsive .ls-nav-left-arrow {
+  position: absolute;
+  left: 0;
+  z-index: 2;
+}
+.ls-responsive .ls-nav-right-arrow {
+  position: absolute;
+  right: 0;
+  z-index: 2;
 }
