--- a/profil/profil.css
+++ b/profil/profil.css
@@ -42,11 +42,23 @@ table {
 	border-spacing: 0;
 }
 
+
+html {
+
+	height: 100%;
+
+}
+
 body {
 
   background-color: #17181b;
+	position: relative;
+	margin:0;
+	height: 100%;
 
 }
+
+
 
 /*  CSS Perso  */
 
@@ -56,9 +68,10 @@ body {
 
   width: 405px;
   background-color: #2b2b2b;
-  position: fixed;
-  height: 100%;
-
+  position: absolute;
+	left: 0;
+	top: 0;
+	bottom: 0;
 }
 
 .user-pic {
@@ -131,12 +144,14 @@ p.user-bio{
 
 .content {
 
-	height: auto;
-	margin-left: 440px;
-	margin-top: 0px;
-	margin-right: 35px;
 	padding-top: 50px;
-	width: 780px;
+	position: absolute;
+	top: 0;
+	left: 405px;
+	bottom: 0;
+	right: 0;
+	overflow: scroll;
+	padding: 20px;
 
 }
 
@@ -173,13 +188,22 @@ hr.subtitle {
 
 	width: 380px;
 	height: auto;
-	float: right;
+	float: left;
 
 }
 
+
+h2 {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size:1.5em;
+    color: #deb90c;
+}
+
+
 h2.myTop-Flop {
 
-	font-size: 1.5em;
 	font-family: 'Roboto';
 	font-weight: bold;
 	color: #deb90c;
@@ -204,83 +228,4 @@ h2.myTop-Flop {
 	margin-top: 20px;
 	margin-left: 35px;
 
-}
-
-
-
-
-
-
-
-/*
- *  Liquid Slider v2
- *  Copyright 2012 Kevin Batdorf
- *  http://liquidslider.com
- *  MIT license
- */
-
-.no-js .liquid-slider {
-  height:350px;
-  overflow:scroll;
-}
-.ls-preloader {
-  background: url(../images/loading.gif) #f2f2f2 no-repeat center 50%;
-  opacity:1;
-  width:100%;
-  height:100%;
-  position:absolute;
-  top:0;
-  left:0;
-  z-index:2;
-}
-
-/*** Containers ***/
-.ls-wrapper {
-  clear: both;
-  overflow: auto;
-  position: relative;
-}
-.liquid-slider {
-  background: #f2f2f2;
-  width: 600px;
-  margin: 0 auto;
-  float: left;
-  overflow: hidden;
-  position: relative;
-}
-.arrows .liquid-slider {
-  /* Margin between slider and arrows */
-  margin: 0 10px;
-}
-.ls-responsive .liquid-slider {
-  width: 100%;
-  margin: 0;
-}
-.panel-container {
-  position: relative;
-  -webkit-backface-visibility: hidden;
-  -webkit-perspective: 1000;
-  /* from http://davidwalsh.name/translate3d */
-}
-.liquid-slider .panel-container .fade {
-  width:100%;
-  opacity: 0;
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: block;
-}
-
-/*** Panels ***/
-.liquid-slider .ls-panel {
-  width: 600px;
-  display: block;
-  float: left;
-}
-.panel-wrapper {
-  height: auto;
-	margin-top: 0px;
-	margin-right: 35px;
-	padding-top: 50px;
-	width: 780px;
 }
