--- a/src/movies/views/movies.html
+++ b/src/movies/views/movies.html
@@ -2,28 +2,38 @@
 
 
     <div class="panel-heading">
-    <h3 class="panel-title panel-title title--inline">Liste des Films Populaires | <a href="#/films">Films</a> | <a href="#/series">Series</a> </h3>
-    
-    <form style="width:450px;margin:5px;padding:15px;border:solid 1px black;background-color:#68228B">
-        <label style="color:white">Tri par genre : </label>
-        <select class="form-control" 
+    <!-- <h3 class="panel-title panel-title title--inline">Liste des Films Populaires | <a href="#/films">Films</a> | <a href="#/series">Series</a> </h3> -->
+
+    <form style="width:370px" class="filters-search-user">
+        <div class="filters">
+        <label class="genre">Genre : </label>
+        <select class="form-control" style="width:106px"
                 ng-change="genre(value)"
                 ng-model="value"
                 ng-options="genre.id as genre.name for genre in listGenre.genres"
             >
-            <option value="">Triez par genre</option>
+            <option value="">Tous</option>
         </select>
-        <hr>
-        <label style="color:white">Recherche : </label>
+        <label class="genre">Trier par : </label>
+        <select
+                ng-change="category(value,1)" style="width:120px"
+                ng-model="value"
+                ng-options="key as value for (key, value) in categories"
+            >
+            <option value="">Tous</option>
+        </select>
+
+        </div>
+        <div class="search">
         <input  class="btn" style="width:100%"
                 ng-change="search(searchValue)"
-                ng-model="searchValue">
+                ng-model="searchValue" type="search">
+        </div>
+        <div class="user">
+            <img class="user-img" src="images/placeholder.png"/>
+            <div class="user-name">User Name</div>
+        </div>
     </form>
-
-
-        
-
-
 
     </div> 
 
@@ -31,7 +41,7 @@
 
         <div ng-if="movies.total_results==0"> Aucun film n'a été trouvé lors de votre recherche</div>
 
-        <div ng-repeat="movie in movies.results | orderBy: query.order" movie="movie" >
+        <div ng-repeat="movie in movies.results | orderBy: query.order" movie="movie" class="movie-block">
             <div class="col-sm-6 col-md-4">
                 <div class="pull-right" ng-switch on="movie.status">
                     <span ng-switch-when="0" class="label label-success">Disponible</span>
@@ -39,31 +49,30 @@
                     <span ng-switch-when="2" class="label label-danger">Blessé(e)</span>
                 </div>
                 <div class="thumbnail">
-                    <img src="http://image.tmdb.org/t/p/w500{{movie.poster_path}}" class="image-thumbnail"> 
-                    <hr>
-                    <img src="http://image.tmdb.org/t/p/w500{{movie.backdrop_path}}" class="image-thumbnail"> 
+                    <img src="http://image.tmdb.org/t/p/w500{{movie.poster_path}}" class="image-thumbnail" ng-click="showMovie(movie.id)"> 
+                    <!-- <img src="http://image.tmdb.org/t/p/w500{{movie.backdrop_path}}" class="image-thumbnail">  -->
                     <div class="caption">
-                        <p>adult : {{movie.adult}}</p>
-                        <h3>title : {{movie.title}}</h3>
-                        <p>original_title : {{movie.original_title}}</p>
+                        <!-- <p>adult : {{movie.adult}}</p> -->
+                        <h2 class="title-home">{{movie.title | limitTo:20}}</h2>
+                       <!--  <p>original_title : {{movie.original_title}}</p>
                         <p>id : {{movie.id}}</p>
                         <p>genre_ids : <ul><li ng-repeat="(key, genre) in movie.genre_ids">{{genre}} (traité TpH : {{ genreList[genre] }} )</li></ul></p>
                         <p>vote_average : {{movie.vote_average}}</p>
-                        <p>original_language : {{movie.original_language}}</p>
-                        <p>release_date : {{movie.release_date}}</p>
-                        <p>overview : {{movie.overview}}</p>
+                        <p>original_language : {{movie.original_language}}</p> -->
+                        <h4 class"title-details">{{movie.release_date | limitTo:4}}</h4>
+                       <!--  <p>overview : {{movie.overview}}</p>
                         <p>popularity : {{movie.popularity}}</p>
                         <p>video : {{movie.video}}</p>
                         <p>vote_average : {{movie.vote_average}}</p>
-                        <p>vote_count : {{movie.vote_count}}</p>
-                        <button class="btn btn-primary" ng-click="showMovie(movie.id)">Regarder</button>
+                        <p>vote_count : {{movie.vote_count}}</p> -->
+                        <!-- <button class="btn btn-primary" >Regarder</button> -->
                     </div>
                 </div>
             </div>
         </div>
 
     <div ng-repeat="movies in movies.more | orderBy: query.order" movie="movie" >
-        <div ng-repeat="movie in movies | orderBy: query.order" movie="movie" >
+        <div ng-repeat="movie in movies | orderBy: query.order" movie="movie" class="movie-block">
             <div class="col-sm-6 col-md-4">
                 <div class="pull-right" ng-switch on="movie.status">
                     <span ng-switch-when="0" class="label label-success">Disponible</span>
@@ -71,24 +80,23 @@
                     <span ng-switch-when="2" class="label label-danger">Blessé(e)</span>
                 </div>
                 <div class="thumbnail">
-                    <img src="http://image.tmdb.org/t/p/w500{{movie.poster_path}}" class="image-thumbnail"> 
-                    <hr>
-                    <img src="http://image.tmdb.org/t/p/w500{{movie.backdrop_path}}" class="image-thumbnail"> 
+                    <img src="http://image.tmdb.org/t/p/w500{{movie.poster_path}}" class="image-thumbnail" ng-click="showMovie(movie.id)"> 
+                    <!-- <img src="http://image.tmdb.org/t/p/w500{{movie.backdrop_path}}" class="image-thumbnail">  -->
                     <div class="caption">
-                        <p>adult : {{movie.adult}}</p>
-                        <h3>title : {{movie.title}}</h3>
-                        <p>original_title : {{movie.original_title}}</p>
+                        <!-- <p>adult : {{movie.adult}}</p> -->
+                        <h2 class="title-home">{{movie.title | limitTo:20}}</h2>
+                       <!--  <p>original_title : {{movie.original_title}}</p>
                         <p>id : {{movie.id}}</p>
                         <p>genre_ids : <ul><li ng-repeat="(key, genre) in movie.genre_ids">{{genre}} (traité TpH : {{ genreList[genre] }} )</li></ul></p>
                         <p>vote_average : {{movie.vote_average}}</p>
-                        <p>original_language : {{movie.original_language}}</p>
-                        <p>release_date : {{movie.release_date}}</p>
-                        <p>overview : {{movie.overview}}</p>
+                        <p>original_language : {{movie.original_language}}</p> -->
+                         <h4 class"title-details">{{movie.release_date | limitTo:4}}</h4>
+                       <!--  <p>overview : {{movie.overview}}</p>
                         <p>popularity : {{movie.popularity}}</p>
                         <p>video : {{movie.video}}</p>
                         <p>vote_average : {{movie.vote_average}}</p>
-                        <p>vote_count : {{movie.vote_count}}</p>
-                        <button class="btn btn-primary" ng-click="showMovie(movie.id)">Regarder</button>
+                        <p>vote_count : {{movie.vote_count}}</p> -->
+                        <!-- <button class="btn btn-primary" ng-click="showMovie(movie.id)">Regarder</button> -->
                     </div>
                 </div>
             </div>
@@ -97,5 +105,5 @@
   
 
     </div>
-<button class="btn btn-primary" ng-click="showMoreMovies(page)"> Voir plus de films ! </button>
+<button class="btn btn-primary" ng-click="showMoreMovies(page)" style="margin:0 auto"> Voir plus de films ! </button>
 </div>
