--- a/src/movies/views/series.html
+++ b/src/movies/views/series.html
@@ -1,81 +1,109 @@
 <div class="panel panel-primary">
-{{series.total_pages}}
+<!-- {{series.total_pages}} -->
 
-    <form style="width:450px;margin:5px;padding:15px;border:solid 1px black;background-color:#68228B">
+    <!-- <form style="width:450px;margin:5px;padding:15px;border:solid 1px black;background-color:#68228B">
         <label style="color:white">Recherche : </label>
         <input  class="btn" style="width:100%"
                 ng-change="search(searchValue,1)"
                 ng-model="searchValue">
+    </form> -->
+    <form style="width:350px" class="filters-search-user">
+        <div class="filters">
+        <!-- label class="genre">Genre : </label>
+        <select class="form-control" style="width:106px"
+                ng-change="genre(value)"
+                ng-model="value"
+                ng-options="genre.id as genre.name for genre in listGenre.genres"
+            >
+            <option value="">Tous</option>
+        </select> -->
+        <label class="genre">Trier par : </label>
+        <select
+                ng-change="category(value,1)" style="width:120px"
+                ng-model="value"
+                ng-options="key as value for (key, value) in categories"
+            >
+            <option value="">Tous</option>
+        </select>
+
+        </div>
+        <div class="search">
+        <input  class="btn" style="width:200px"
+                ng-change="search(searchValue)"
+                ng-model="searchValue" type="search">
+        </div>
+        <div class="user" style="margin-left:60px">
+            <img class="user-img" src="images/placeholder.png"/>
+            <div class="user-name">User Name</div>
+        </div>
     </form>
-<div class="panel-heading">
+<!-- <div class="panel-heading">
     <h3 class="panel-title panel-title title--inline">Liste des Films Populaires | <a href="#/films">Films</a> | <a href="#/series">Series</a> </h3>
    
-    </div>
+    </div> -->
 
     <div ng-if="series.total_results==0"> Aucun série n'a été trouvé lors de votre recherche</div>
     
     <div class="panel-body">
 
        
-    <div  ng-repeat="serie in series.results">
-      <div class="col-sm-6 col-md-4" >
-    <div class="pull-right" ng-switch on="movie.status">
-        <span ng-switch-when="0" class="label label-success">Disponible</span>
-        <span ng-switch-when="1" class="label label-warning">Occupé(e)</span>
-        <span ng-switch-when="2" class="label label-danger">Blessé(e)</span>
-    </div>
-    <div class="thumbnail">
-        <img src="http://image.tmdb.org/t/p/w500{{serie.poster_path}}" class="image-thumbnail">   
-<hr>
-        <img src="http://image.tmdb.org/t/p/w500{{serie.backdrop_path}}" class="image-thumbnail">  
-        <div class="caption">
-           
-            <h3>name : {{serie.name}}</h3>
-            <p>original_name : {{serie.original_name}}</p>
-            <p>id : {{serie.id}}</p>                    
-            <p>first_air_date : {{serie.first_air_date}}</p>
-            <p>origin_country : {{serie.origin_country}}</p>
-            <p>popularity : {{serie.popularity}}</p>
-            <p>vote_average : {{serie.vote_average}}</p>
-            <p>vote_count : {{serie.vote_count}}</p>
-            <button class="btn btn-primary" ng-click="showSerie(serie.id)">Regarder</button>
-        </div>
-    </div>
-    </div>    </div>   
+    <div  ng-repeat="serie in series.results" class="movie-block">
+        <div class="col-sm-6 col-md-4" >
+            <div class="pull-right" ng-switch on="movie.status">
+                <span ng-switch-when="0" class="label label-success">Disponible</span>
+                <span ng-switch-when="1" class="label label-warning">Occupé(e)</span>
+                <span ng-switch-when="2" class="label label-danger">Blessé(e)</span>
+            </div>
+            <div class="thumbnail">
+                <img src="http://image.tmdb.org/t/p/w500{{serie.poster_path}}" class="image-thumbnail" ng-click="showSerie(serie.id)">
+                <!-- <img src="http://image.tmdb.org/t/p/w500{{serie.backdrop_path}}" class="image-thumbnail">   -->
+                <div class="caption">
+                    <h2 class="title-home">{{serie.name | limitTo:20}}</h2>
+                    <!-- <p>original_name : {{serie.original_name}}</p>
+                    <p>id : {{serie.id}}</p>  -->                  
+                    <h4 class"title-details">{{serie.first_air_date | limitTo:4}}</h4>               
+                    <!-- <p>first_air_date : {{serie.first_air_date}}</p>
+                    <p>origin_country : {{serie.origin_country}}</p>
+                    <p>popularity : {{serie.popularity}}</p>
+                    <p>vote_average : {{serie.vote_average}}</p>
+                    <p>vote_count : {{serie.vote_count}}</p> -->
+                    <!-- <button class="btn btn-primary" ng-click="showSerie(serie.id)">Regarder</button> -->
+                </div>
+            </div>
+        </div>    
+    </div>   
 
     <div ng-repeat="series in series.more">
-    <div  ng-repeat="serie in series">
-      <div class="col-sm-6 col-md-4" >
-    <div class="pull-right" ng-switch on="movie.status">
-        <span ng-switch-when="0" class="label label-success">Disponible</span>
-        <span ng-switch-when="1" class="label label-warning">Occupé(e)</span>
-        <span ng-switch-when="2" class="label label-danger">Blessé(e)</span>
-    </div>
-    <div class="thumbnail">
-        <img src="http://image.tmdb.org/t/p/w500{{serie.poster_path}}" class="image-thumbnail">   
-<hr>
-        <img src="http://image.tmdb.org/t/p/w500{{serie.backdrop_path}}" class="image-thumbnail">  
-        <div class="caption">
-           
-            <h3>name : {{serie.name}}</h3>
-            <p>original_name : {{serie.original_name}}</p>
-            <p>id : {{serie.id}}</p>                    
-            <p>first_air_date : {{serie.first_air_date}}</p>
-            <p>origin_country : {{serie.origin_country}}</p>
-            <p>popularity : {{serie.popularity}}</p>
-            <p>vote_average : {{serie.vote_average}}</p>
-            <p>vote_count : {{serie.vote_count}}</p>
-            <button class="btn btn-primary" ng-click="showSerie(serie.id)">Regarder</button>
+        <div  ng-repeat="serie in series" class="movie-block">
+            <div class="col-sm-6 col-md-4" >
+                <div class="pull-right" ng-switch on="movie.status">
+                    <span ng-switch-when="0" class="label label-success">Disponible</span>
+                    <span ng-switch-when="1" class="label label-warning">Occupé(e)</span>
+                    <span ng-switch-when="2" class="label label-danger">Blessé(e)</span>
+                </div>
+            <div class="thumbnail">
+                <img src="http://image.tmdb.org/t/p/w500{{serie.poster_path}}" class="image-thumbnail" ng-click="showSerie(serie.id)">
+                <!-- <img src="http://image.tmdb.org/t/p/w500{{serie.backdrop_path}}" class="image-thumbnail">   -->
+                <div class="caption">
+                   <h2 class="title-home">{{serie.name | limitTo:20}}</h2>
+                    <!-- <h3>name : {{serie.name}}</h3>
+                    <p>original_name : {{serie.original_name}}</p>
+                    <p>id : {{serie.id}}</p>   -->   
+                    <h4 class"title-details">{{serie.first_air_date | limitTo:4}}</h4>                
+                    <!-- <p>first_air_date : {{serie.first_air_date}}</p>
+                    <p>origin_country : {{serie.origin_country}}</p>
+                    <p>popularity : {{serie.popularity}}</p>
+                    <p>vote_average : {{serie.vote_average}}</p>
+                    <p>vote_count : {{serie.vote_count}}</p> -->
+                    <!-- <button class="btn btn-primary" ng-click="showSerie(serie.id)">Regarder</button> -->
+                </div>
+            </div>
+            </div>
         </div>
     </div>
-    </div>
-    </div>
-
-
-</div>
 
          <div class="panel-heading">
-            <p style="margin:auto;width:140px" >
+            <p>
                 <button ng-if="series.total_pages>=page"  class="btn btn-primary" ng-click="showMoreSeries(page)"> Voir plus de séries ! </button>
             </p>
         </div>
