--- a/src/movies/views/login.html
+++ b/src/movies/views/login.html
@@ -1,2 +1,3 @@
 <button ng-click="authenticate('facebook')">Sign in with Facebook</button>
 <div id="fb-root">
+  <button ng-click="authenticate('google')">Sign in with Google</button>
